--- a/2017-10-16/workshop_00.ipynb
+++ b/2017-10-16/workshop_00.ipynb
@@ -983,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Screenshot%20%2821%29.png](attachment:Screenshot%20%2821%29.png)"
+    "![Screenshot%20%2821%29.png](Screenshot%20%2821%29.png)"
    ]
   },
   {
@@ -1134,7 +1134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Screenshot%20%2823%29.png](attachment:Screenshot%20%2823%29.png)"
+    "![Screenshot%20%2823%29.png](Screenshot%20%2823%29.png)"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Screenshot%20%2822%29.png](attachment:Screenshot%20%2822%29.png)"
+    "![Screenshot%20%2822%29.png](Screenshot%20%2822%29.png)"
    ]
   },
   {
