--- a/2017-10-16/workshop_00.ipynb
+++ b/2017-10-16/workshop_00.ipynb
@@ -933,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Screenshot%20%2820%29.png](attachment:Screenshot%20%2820%29.png)"
+    "![Screenshot%20%2820%29.png](Screenshot%20%2820%29.png)"
    ]
   },
   {
