--- a/2017-10-16/workshop_00.ipynb
+++ b/2017-10-16/workshop_00.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>16-10-17</h2>"
+    "<h2>Workshop_00 (16-10-17)</h2>"
    ]
   },
   {
