--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -26,13 +26,13 @@
    "metadata": {},
    "source": [
     "# DEF Leg = CUBOID:< 0.1,0.1,0.7 >;\n",
-    "DEF Plane = CUBOID:< 1, 1, 0.2>;\n",
-    "DEF Table = STRUCT:<\n",
-    "Leg, T:1:0.9, Leg, T:2:0.9, Leg, T:1:-0.9, Leg,\n",
-    "T:<2,3>:<-0.9,0.7>, Plane >;\n",
-    "DEF Table1 = STRUCT:<\n",
-    "Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg,\n",
-    "T:3:0.7:Plane >;\n",
+    "# DEF Plane = CUBOID:< 1, 1, 0.2>;\n",
+    "# DEF Table = STRUCT:<\n",
+    "# Leg, T:1:0.9, Leg, T:2:0.9, Leg, T:1:-0.9, Leg,\n",
+    "# T:<2,3>:<-0.9,0.7>, Plane >;\n",
+    "# DEF Table1 = STRUCT:<\n",
+    "# Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg,\n",
+    "# T:3:0.7:Plane >;\n",
     "VRML: Table: ? out.wrl ? ;"
    ]
   },
