--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -29,17 +29,9 @@
     "\n",
     "DEF Plane = CUBOID:< 1, 1, 0.2>;\n",
     "\n",
-    "DEF Table = STRUCT:<\n",
+    "DEF Table = STRUCT:<Leg, T:1:0.9, Leg, T:2:0.9, Leg, T:1:-0.9, Leg,T:<2,3>:<-0.9,0.7>, Plane >;\n",
     "\n",
-    "Leg, T:1:0.9, Leg, T:2:0.9, Leg, T:1:-0.9, Leg,\n",
-    "\n",
-    "T:<2,3>:<-0.9,0.7>, Plane >;\n",
-    "\n",
-    "DEF Table1 = STRUCT:<\n",
-    "\n",
-    "Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg,\n",
-    "\n",
-    "T:3:0.7:Plane >;\n",
+    "DEF Table1 = STRUCT:<Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg, T:3:0.7:Plane >;\n"",
     "\n",
     "VRML: Table: ? out.wrl ? ;"
    ]
