--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![tavolo.PNG.png](attachment:tavolo.PNG.png)"
+    "![tavolo.PNG.png](imm/tavolo.PNG.png)"
    ]
   },
   {
