--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![boolean.PNG.png](boolean.PNG.png)"
+    "![boolean.PNG.png](imm/boolean.PNG.png)"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Manhattan2D.png](Manhattan2D.png)"
+    "![Manhattan2D.png](imm/Manhattan2D.png)"
    ]
   },
   {
