--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
     "    return CUBOID([spessore,spessore,x/2])\n",
     "def plane(x,y,spessore):\n",
     "    return CUBOID([x,y,spessore])\n",
-    "def scaffali(x,y,spessore,numero_scaffali):\n",
-    "    componente = STRUCT([plane(x,y,spessore),leg(x,spessore),T([1,2])([x-spessore,y-spessore])(leg(x,spessore)),T([1,2])([x-spessore,0])(leg(x,spessore)),T([1,2])([0,y-spessore])(leg(x,spessore))])\n",
+    "def scaffali(x,y,spessore_piano,spessore_gambe,numero_scaffali):\n",
+    "    componente = STRUCT([plane(x,y,spessore_piano),leg(x,spessore_gambe),T([1,2])([x-spessore_gambe,y-spessore_gambe])(leg(x,spessore_gambe)),T([1,2])([x-spessore_gambe,0])(leg(x,spessore_gambe)),T([1,2])([0,y-spessore_gambe])(leg(x,spessore_gambe))])\n",
     "    return STRUCT(NN(numero_scaffali)([(componente),T(3)(x/2)]))"
    ]
   },
@@ -43,27 +43,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>mobiletto(double dim_x, double dim_y, double spessore, int numero_scaffali)</b> crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\" e spessore \"spessore\""
+    "<b>mobiletto(double dim_x, double dim_y, double spessore_piano, double gambe, int numero_scaffali)</b> crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\" e spessore \"spessore\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B42D120> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000CA22F90> >"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(scaffali(0.5,1,0.1,5))"
+    "VIEW(scaffali(0.5,1,0.01,0.01,5))"
    ]
   },
   {
@@ -75,22 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B42D7E0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000CA4ADE0> >"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(scaffali(0.5,0.5,0.03,8))"
+    "VIEW(scaffali(0.5,0.5,0.03,0.03,8))"
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B4440F0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DEA0> >"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B552360> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DE40> >"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +194,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B47F240> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DA80> >"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +255,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -266,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B42D960> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97D930> >"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -364,10 +361,10 @@
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B42D930> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97D510> >"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,16 +388,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Codice da eseguire per creare i vari oggetti che arredano la stanza</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyplasm import *\n",
     "from larlib import *\n",
     "\n",
+    "def gray_wall(larghezza, altezza):\n",
+    "    return COLOR(GRAY)(CUBOID([0.1,altezza,larghezza]))\n",
+    "\n",
     "def wall(larghezza, altezza):\n",
-    "    return COLOR(GRAY)(CUBOID([0.1,12,6]))\n",
+    "    return TEXTURE('imm/texture/legno.png')(CUBOID([0.1,altezza,larghezza]))\n",
+    "\n",
+    "def floor(larghezza, altezza):\n",
+    "    return TEXTURE('imm/texture/floor.png')(CUBOID([0.1,altezza,larghezza]))\n",
+    "\n",
+    "def tappeto(larghezza, altezza):\n",
+    "    return TEXTURE('imm/texture/tappeto.png')(CUBOID([0.1,altezza,larghezza]))\n",
+    "\n",
+    "def poster(larghezza, altezza):\n",
+    "    return TEXTURE('imm/texture/poster.png')(CUBOID([0.05,altezza,larghezza]))\n",
     "\n",
     "def leg(x,spessore):\n",
     "    return CUBOID([spessore,spessore,x/2])\n",
@@ -412,11 +428,29 @@
     "    componente = COLOR(RED)(STRUCT([plane(x,y,spessore),leg(x,spessore),T([1,2])([x-spessore,y-spessore])(leg(x,spessore)),T([1,2])([x-spessore,0])(leg(x,spessore)),T([1,2])([0,y-spessore])(leg(x,spessore))]))\n",
     "    return STRUCT(NN(numero_scaffali)([componente,T(3)(x/2)]))\n",
     "\n",
+    "def leg_table(spessore):\n",
+    "    return CUBOID([spessore,spessore,1.7])\n",
+    "\n",
+    "def table(x,y,spessore):\n",
+    "    return TEXTURE('imm/texture/legno2.png')(STRUCT([plane(x,y,spessore),leg_table(spessore),T([1,2])([x-spessore,y-spessore])(leg_table(spessore)),T([1,2])([x-spessore,0])(leg_table(spessore)),T([1,2])([0,y-spessore])(leg_table(spessore))]))\n",
+    "\n",
+    "def leg_chair():\n",
+    "    return CUBOID([0.1,0.1,0.7])\n",
+    "def plane_chair():\n",
+    "    return CUBOID([1,1,0.2])\n",
+    "def back_of_a_chair():\n",
+    "    return CUBOID([0.1,1,1.4])\n",
+    "def chair():\n",
+    "    return TEXTURE('imm/texture/legno2.png')(STRUCT([leg_chair(), T(1)(0.9),leg_chair(),T(2)(0.9),leg_chair(),T(1)(-0.9),leg_chair(),T([2,3])([-0.9,0.7]), plane_chair(), back_of_a_chair()]))\n",
+    "\n",
     "def tile(x,y,z):\n",
     "    return PROD([PROD([QUOTE([x]),QUOTE([y])]),QUOTE([z])])\n",
     "\n",
     "def shelf(a,b):\n",
     "    return COLOR(RED)(STRUCT([tile(a,a,b),tile(a,b,a),tile(b,a,a),T(1)(a-b)(tile(b,a,a)),T(3)(a-b)(tile(a,a,b))]))\n",
+    "\n",
+    "def shelfs_colonna(a,b,numero):\n",
+    "    return STRUCT(NN(numero)([shelf(a,b),T(3)(a)]))\n",
     "\n",
     "def shelfs_comp():\n",
     "    return STRUCT([shelf(1,0.1),T([1,3])([1.5,0.5])(shelf(1.3,0.1)),T([1,3])([1.5,-0.5])(shelf(0.7,0.1))])\n",
@@ -429,8 +463,8 @@
     "    plane3=RIGHT([RIGHT([plane,plane]),plane])\n",
     "    return STRUCT([plane3,T(3)(b)(library)])\n",
     "\n",
-    "def cassetto():\n",
-    "    return CUBOID([1.5,1,2])\n",
+    "def cassetto(larghezza,altezza):\n",
+    "    return CUBOID([larghezza,1,altezza])\n",
     "\n",
     "def tile(x,y,z):\n",
     "    return PROD([PROD([QUOTE([x]),QUOTE([y])]),QUOTE([z])])\n",
@@ -448,12 +482,15 @@
     "    return COLOR(RED)(SPHERE(0.05)([24,32]))\n",
     "\n",
     "def mobile_con_pomelli():\n",
-    "    return STRUCT([T(1)(1)(cassetto()),S(3)(.2)(shelfs_mobile()),T(1)(-1.5)(cassetto()),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile()),T([1,2,3])([1.2,1,0.8])(pomello()),T([1,2,3])([-0.2,1,0.8])(pomello())])"
+    "    return STRUCT([T(1)(1)(cassetto(1.5,2)),S(3)(.2)(shelfs_mobile()),T(1)(-1.5)(cassetto(1.5,2)),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile()),T([1,2,3])([1.2,1,0.8])(pomello()),T([1,2,3])([-0.2,1,0.8])(pomello())])\n",
+    "\n",
+    "def mobile_grande():\n",
+    "    return TEXTURE('imm/texture/legno2.png')((STRUCT([T(1)(1)(cassetto(1.5,4)),shelfs_colonna(1,0.05,4),T(1)(-1.5)(cassetto(1.5,4)),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile())])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -467,20 +504,19 @@
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000B42D420> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C9AAEA0> >"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(STRUCT([wall(5,10), T(2)(6)(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T(2)(10)(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T(2)(2)(R([1,2])(PI/2)(mobile_con_pomelli()))]))"
+    "VIEW(STRUCT([gray_wall(6,12),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([2,0.3])(R([1,2])(PI/2)(mobile_con_pomelli()))]))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -488,7 +524,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -496,11 +531,77 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "![room_3.png](imm/room_3.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Stanza arredata con i mobili IKEA ed altri dettagli (tavolo, sedie, tappeto e poster)</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Child 3\n",
+      "Child 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97F030> >"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VIEW(STRUCT([wall(6,12), R([1,2])(PI/2)(wall(6,12)), T([1,2,3])([-2,0.1,1])(R([1,2])(PI/2)(poster(4,4))), R([1,3])(PI/2)(floor(12,12)), T([1,2,3])([-4,3,0.05])(R([1,3])(PI/2)(tappeto(4,6))),T([1,2,3])([-5,4,1.71])(R([1,3])(PI)(table(2,4,0.2))), T([1,2,3])([-7.5,4.5,0.2])(chair()),T([1,2,3])([-7.5,6.5,0.2])(chair()),T([1,2,3])([-4.5,5.5,0.2])(R([1,2])(PI)(chair())),T([1,2,3])([-4.5,7.5,0.2])(R([1,2])(PI)(chair())),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([2,0.3])(R([1,2])(PI/2)(mobile_con_pomelli())), T([1,2,3])([-10,0.1,0.3])(mobile_grande())]))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![room_completa1.png](imm/room_completa1.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![room_completa2.png](imm/room_completa2.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![room_completa3.png](imm/room_completa3.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![room_completa4.png](imm/room_completa4.png)"
    ]
   },
   {
