--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "- mobiletto(double dim_x, double dim_y, double spessore_piano, double spessore_gambe, int numero_scaffali)/n",
-    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\" e spessore \"spessore\"
+    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\" e spessore \"spessore\""
    ]
   },
   {
