--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Workshop_02 (30-10-17)</h2>"
+    "<h2>Workshop_02 (30-10-17)</h2>\n\n",
+    "- In questo workshop sono stati realizzati diversi mobili presenti nel sito di IKEA\n",
+    "- I mobili e gli altri ogetti definiti sono parametrizzati per altezza, larghezza, spessore, numero componenti ecc...\n",
+    "- In conclusione è stata realizzata una stanza con i vari mobili ed altri oggetti di design precedentemente definiti\n",
+    "- Sono state utilizzate delle texture per rendere il risultato finale più gradevole"
    ]
   },
   {
@@ -43,8 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- mobiletto(double dim_x, double dim_y, double spessore_piano, double spessore_gambe, int numero_scaffali)/n",
-    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\" e spessore \"spessore\""
+    "- mobiletto(double dim_x, double dim_y, double spessore_piano, double spessore_gambe, int numero_scaffali)\n",
+    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\", spessore del piano \"spessore_piano\ e spessore delle gambe \"spessore_gambe\""
    ]
   },
   {
@@ -105,7 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>shelf(double larghezza, double spessore)</b> crea un cubo vuoto miniaml (oggetto in figura)"
+    "- shelf(double larghezza, double spessore)\n",
+    "- crea un cubo dal design minimal (oggetto in figura)"
    ]
   },
   {
@@ -205,7 +210,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>mobiletto(double lato, double spessore, int altezzaa)</b> crea un mobile miniaml composto da 3 shelf in larghezza e un numero di piani pari ad \"altezza\" (oggetto in figura)"
+    "- mobiletto(double lato, double spessore, int altezzaa)\n",
+    "- crea un mobile miniaml composto da 3 shelf in larghezza e un numero di piani pari ad \"altezza\" (oggetto in figura)"
    ]
   },
   {
