--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Workshop_02 (30-10-17)</h2>\n\n",
+    "<h2>Workshop_02 (30-10-17)</h2>\n",
     "- In questo workshop sono stati realizzati diversi mobili presenti nel sito di IKEA\n",
     "- I mobili e gli altri ogetti definiti sono parametrizzati per altezza, larghezza, spessore, numero componenti ecc...\n",
     "- In conclusione è stata realizzata una stanza con i vari mobili ed altri oggetti di design precedentemente definiti\n",
