--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "- mobiletto(double dim_x, double dim_y, double spessore_piano, double spessore_gambe, int numero_scaffali)\n",
-    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\", spessore del piano \"spessore_piano\ e spessore delle gambe \"spessore_gambe\""
+    "- crea un mobiletto minimal di N scaffali di larghezza \"dim_x\", altezza \"dim_y\", spessore del piano \"spessore_piano\" e spessore delle gambe \"spessore_gambe\""
    ]
   },
   {
