--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -14,7 +14,7 @@
     "<h2>Workshop_02 (30-10-17)</h2>\n",
     "- In questo workshop sono stati realizzati diversi mobili presenti nel sito di IKEA\n",
     "- I mobili e gli altri oggetti definiti sono parametrizzati per altezza, larghezza, spessore, numero componenti ecc...\n",
-    "- In conclusione è stata realizzata una stanza con i vari mobili ed altri oggetti di design precedentemente definiti\n",
+    "- In conclusione è stata realizzata una stanza arredata con i vari mobili ed altri oggetti di design precedentemente definiti\n",
     "- Sono state utilizzate delle texture per rendere il risultato finale più gradevole"
    ]
   },
