--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\"</h1>"
+    "<h1>Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\"</h1>\n",
+    "- In questo workshop sono stati convertiti da FL a PyPlasm alcuni degli script presenti nel capitolo 1 e 2 del libro"
    ]
   },
   {
@@ -22,10 +23,11 @@
    ]
   },
   {
-  "cell_type": "raw",
+  "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DEF Leg = CUBOID:< 0.1,0.1,0.7 >;\n",
+    "```\n",
+    "DEF Leg = CUBOID:< 0.1,0.1,0.7 >;\n",
     "DEF Plane = CUBOID:< 1, 1, 0.2>;\n",
     "DEF Table = STRUCT:<\n",
     "Leg, T:1:0.9, Leg, T:2:0.9, Leg, T:1:-0.9, Leg,\n",
@@ -33,6 +35,7 @@
     "DEF Table1 = STRUCT:<\n",
     "Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg,\n",
     "T:3:0.7:Plane >;\n",
+    "```\n",
     "VRML: Table: ? out.wrl ? ;"
    ]
   },
